Commit al master del blogpost en su versión más reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-    <h1>Aquí vamos a hacer un blog post</h1>
-    <p>y este es el párrafo de inicio</p>
+    <div class="container">
+        <h1>Aquí vamos a hacer un blog post</h1>
+        <p>y este es el párrafo de inicio</p>
+    </div>
 </body>
 
 </html>
