--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,9 @@
 
 <body>
     <div class="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <h1>Aquí vamos a hacer un blog post</h1>
         <p>y este es el párrafo de inicio</p>
     </div>
