Finalizada la cabezera con diseño turqueza

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div id="cabecera">
-            Cabecera
+            Hyperblog <span class="subtitulo">Tu blog de confianza</span>
         </div>
         <h1>Aquí vamos a hacer un blog post</h1>
         <p>y este es el párrafo de inicio</p>
