--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,12 @@
 <body>
     <div class="container">
         <h1>Aquí vamos a hacer un blog post</h1>
-        <p>y este es el párrafo de inicio</p>
+        <p>Este es el inicio del párrafo en el que vamos a hablar sobre los blogposts
+            que son foros donde la gente conversa sobre varios temas
+        </p>
+        <p>Aquí empieza el segundo párrafo para poder hacer una prueba de merge en el
+            curso de git y github, ojalá y todo funcione bien.
+        </p>
     </div>
 </body>
 
