agregué suscripción, cambié la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div id="cabecera">
-            Hyperblog <span class="subtitulo">Tu blog de confianza</span>
+            Hyperblog <span class="subtitulo">Tu blog maestro</span>
         </div>
         <h1>Aquí vamos a hacer un blog post</h1>
         <p>Este es el inicio del párrafo en el que vamos a hablar sobre los blogposts
@@ -21,6 +21,7 @@
         <p>Aquí empieza el segundo párrafo para poder hacer una prueba de merge en el
             curso de git y github, ojalá y todo funcione bien.
         </p>
+        <p>Suscríbete y dale like</p>
     </div>
 </body>
 
