--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div id="cabecera">
-            Hyperblog <span class="subtitulo">Tu blog de blogs </span>
+            Hyperblog 2.0 <span class="subtitulo">Tu blog de blogs </span>
         </div>
         <h1>Aquí vamos a hacer un blog post</h1>
         <p>Este es el inicio del párrafo en el que vamos a hablar sobre los blogposts
